--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -15,13 +15,14 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-logo {
-   align-self: flex-start;
    line-height: 0;
    margin-bottom: 0;
    width: 46px;
+   margin-right: 10px;
 
    a {
        display: block;
@@ -81,6 +82,7 @@
         border-bottom: solid 2px $brand-color-a;
 
         @media #{$BPD} {
+            border: none;
             display: inline-block;
             margin: 0 $ggw/2;
         }
